add front page of keshi details

--- a/src/main/resources/templates/assets/details.html
+++ b/src/main/resources/templates/assets/details.html
@@ -270,11 +270,12 @@
                       <h5>北京XXX影院 影厅分布图</h5>
                     </div>
                   </div>
-                    <div id="father">
-                        <div id="box">
-                            <canvas id="canvas" width="400px" height="450px"></canvas>
-                        </div>
-                    </div>
+                  <img class="img-fluid" alt="photo" width="55%" th:src="@{/dist/img/WechatIMG273.jpeg}">
+<!--                    <div id="father">-->
+<!--                        <div id="box">-->
+<!--                        <canvas id="canvas" width="400px" height="450px"></canvas>-->
+<!--                        </div>-->
+<!--                    </div>-->
               </div>
               </div>
               <!-- /.row -->
