--- a/src/main/resources/templates/base/equipment/search.html
+++ b/src/main/resources/templates/base/equipment/search.html
@@ -108,7 +108,7 @@
                         </select>
                       </div>
                     </div>
-                    <div class="col-2 float-lg-right">
+                    <div class="col-3 float-lg-right">
                       <div class="form-group">
                         <label>规格/类型：</label>
                         <select class="form-control" name="brand">
@@ -127,7 +127,7 @@
                         <option>戴尔</option>
                       </select>
                     </div>
-                    <div class="col-2 float-lg-left">
+                    <div class="col-3 float-lg-left">
                       <label>系列：</label>
                       <select class="form-control" name="brand">
                         <option>CLP 系列</option>
@@ -148,10 +148,6 @@
                         <option>L </option>
                         <option>LHC </option>
                       </select>
-                    </div>
-                    <div class="col-2 float-lg-right">
-                      <label>序列号：</label>
-                      <input type="text" class="form-control" placeholder="例：XXXX-XXXXX-XXXX" name="number">
                     </div>
                   </div>
                 </div>
@@ -201,31 +197,76 @@
                 <th><a href="/base/equipment/details">详情</a></th>
               </tr>
               <tr>
-                <td >23343</td>
+                <td >1</td>
                 <td >放映机</td>
                 <td >科视</td>
-                <td >科视Christie</td>
-                <td >CP4325</td>
-                <td >CP4325-RGB</td>
-                <th><a href="/base/equipment/details">详情</a></th>
+                <td >科视 Christie</td>
+                <td >CP2215</td>
+                <td >DLP数字电影机</td>
+                <th><a href="https://www.christiedigital.com/zh-cn/cinema/cinema-products/digital-cinema-projectors/Christie-CP2215-DLP-Digital-Cinema-Projector">官网详情</a></th>
               </tr>
               <tr>
-                <td >23892</td>
-                <td >服务器</td>
-                <td >高级存储</td>
-                <td >华为</td>
-                <td >存储系列</td>
-                <td >SLM</td>
-                <th><a href="#">详情</a></th>
+                <td >2</td>
+                <td >放映机</td>
+                <td >科视</td>
+                <td >科视 Christie</td>
+                <td >CP2220</td>
+                <td >DLP数字电影机</td>
+                <th><a href="https://www.christiedigital.com/zh-cn/cinema/cinema-products/digital-cinema-projectors/christie-CP2220-DLP-Digital-Cinema-Projector">官方详情</a></th>
               </tr>
               <tr>
-                <td >23356</td>
-                <td >服务器</td>
-                <td >计算服务</td>
-                <td >惠普</td>
-                <td >计算系列</td>
-                <td >HP_LL</td>
-                <th><a href="#">详情</a></th>
+                <td >3</td>
+                <td >放映机</td>
+                <td >科视</td>
+                <td >科视 Christie</td>
+                <td >CP2230</td>
+                <td >DLP数字电影机</td>
+                <th><a href="https://www.christiedigital.com/zh-cn/cinema/cinema-products/digital-cinema-projectors/christie-CP2230-DLP-Digital-Cinema-Projector">官网详情</a></th>
+              </tr>
+              <tr>
+                <td >4</td>
+                <td >放映机</td>
+                <td >科视</td>
+                <td >科视 Christie</td>
+                <td >CP4220</td>
+                <td >DLP数字电影机</td>
+                <th><a href="https://www.christiedigital.com/zh-cn/cinema/cinema-products/digital-cinema-projectors/christie-CP4220-DLP-Digital-Cinema-Projector">官网详情</a></th>
+              </tr>
+              <tr>
+                <td >5</td>
+                <td >放映机</td>
+                <td >Barco</td>
+                <td >Barco Alchemy</td>
+                <td >DP2K-20C</td>
+                <td >小型DLP Cinema投影仪（18500）</td>
+                <th><a href="https://www.barco.com.cn/zh-CN/product/dp2k-20c#specs">官网详情</a></th>
+              </tr>
+              <tr>
+                <td >6</td>
+                <td >放映机</td>
+                <td >Barco</td>
+                <td >Barco Alchemy</td>
+                <td >DP2K-23B</td>
+                <td >高亮度DLP Cinema投影仪（24500流明）</td>
+                <th><a href="https://www.barco.com.cn/zh-CN/product/dp2k-23b">官网详情</a></th>
+              </tr>
+              <tr>
+                <td >7</td>
+                <td >放映机</td>
+                <td >Barco</td>
+                <td >Barco Alchemy</td>
+                <td >DP2K-23B</td>
+                <td >小型DLP Cinema投影仪（6000流明）</td>
+                <th><a href="https://www.barco.com.cn/zh-CN/product/dp2k-8s">官网详情</a></th>
+              </tr>
+              <tr>
+                <td >8</td>
+                <td >放映机</td>
+                <td >Barco</td>
+                <td >Barco Alchemy</td>
+                <td >DP2K-10S</td>
+                <td >小型DLP Cinema投影仪（9000流明）</td>
+                <th><a href="https://www.barco.com.cn/zh-CN/product/dp2k-10s">官网详情</a></th>
               </tr>
               </tbody>
             </table>
