--- a/src/main/resources/templates/assets/details_room.html
+++ b/src/main/resources/templates/assets/details_room.html
@@ -269,12 +269,12 @@
                     <div class="col-sm-6">
                       <h5>北京XXXX影院 第 2 影厅 布局平面图</h5>
                     </div>
-<!--                    <img class="img-fluid" alt="photo" width="55%" th:src="@{/dist/img/WechatIMG269.jpeg}">-->
-                    <div id="father">
-                      <div id="box">
-                        <canvas id="canvas" width="400px" height="450px"></canvas>
-                      </div>
-                    </div>
+                    <img class="img-fluid" alt="photo" width="55%" th:src="@{/dist/img/WechatIMG269.jpeg}">
+<!--                    <div id="father">-->
+<!--                      <div id="box">-->
+<!--                        <canvas id="canvas" width="400px" height="450px"></canvas>-->
+<!--                      </div>-->
+<!--                    </div>-->
                   </div>
                 </div>
               </div>
@@ -293,29 +293,30 @@
                       <th>序列号</th>
                       <th>购买日期</th>
 					  <th>所在影厅</th>
-                      <th>备注</th>
 					  <th>详情</th>
+                      <th>官网详情</th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr>
-                      <td>巴可</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
+                      <td>科视Christie </td>
+                      <td>CP4325-RGB</td>
+                      <td>12-53-YT-46-15-BG</td>
                       <td>2018/6/24</td>
 					  <td>1 号厅</td>
-                      <td>-</td>
-					  <th><a href="/assets/equipment_details">>>详情</a></th>
+					  <th><a href="/assets/equipment_details_k">>>详情</a></th>
+                      <th><a href="https://www.christiedigital.com/zh-cn/cinema/cinema-products/digital-cinema-projectors/christie-cp4325-rgb">官网详情</a> </th>
 
                     </tr>
 					<tr>
-                      <td>科视</td>
-                      <td>DP2K-32C</td>
-                      <td>1253354615</td>
+                      <td>巴可 </td>
+                      <td>DP2K-10S</td>
+                      <td>DK-IJ-92-67-26-HD</td>
                       <td>2018/6/24</td>
 					  <td>1 号厅</td>
-                      <td>-</td>
-					  <th><a href="">>>详情</a></th>
+					  <th><a href="/assets/equipment_details_b">>>详情</a></th>
+                      <th><a href="https://www.barco.com.cn/zh-CN/product/dp2k-10s">官网详情</a> </th>
+
                     </tr>
 <!--					<tr>-->
 <!--                      <td>巴可</td>-->
