--- a/src/main/resources/templates/documents/standard.html
+++ b/src/main/resources/templates/documents/standard.html
@@ -146,7 +146,7 @@
                     <div style="padding-left:40px; padding-top:10px;">
                       <img class="img-responsive attachment-block clearfix" src="http://www.crifst.ac.cn/PDF/hangyebiaozhun/GYT2482011/files/thumb/1.jpg" style="height:330px;width:auto ;max-height: 330px;min-height: 330px;">
                     </div>
-                    <p style="padding-left: 10px; padding-right: 10px;">数字电影中档和流动放映系统用声频功率放大器技术要求和测量方法</p>
+                    <p style="padding-left: 10px; padding-right: 10px;">影厅建声环境中的一个重要的因素——混响时间</p>
                     <div class="form-group row">
                       <div class="col-11">
                         <p style="padding-left: 10px; padding-bottom: 30px;">
@@ -168,7 +168,7 @@
                       <div class="col-11">
                         <p style="padding-left: 10px; padding-bottom: 30px;">
                           <span style="float: left;">2018-03-24 07:15</span>
-                          <a style="float: right;" href="/documents/stand_details"> 详情>> </a>
+                          <a style="float: right;" href="#"> 详情>> </a>
                         </p>
                       </div>
                     </div>
@@ -185,7 +185,7 @@
                       <div class="col-11">
                         <p style="padding-left: 10px; padding-bottom: 30px;">
                           <span style="float: left;">2018-03-24 07:15</span>
-                          <a style="float: right;" href="/documents/stand_details"> 详情>> </a>
+                          <a style="float: right;" href="#"> 详情>> </a>
                         </p>
                       </div>
                     </div>
@@ -202,7 +202,7 @@
                       <div class="col-11">
                         <p style="padding-left: 10px; padding-bottom: 30px;">
                           <span style="float: left;">2018-03-24 07:15</span>
-                          <a style="float: right;" href="/documents/stand_details"> 详情>> </a>
+                          <a style="float: right;" href="#"> 详情>> </a>
                         </p>
                       </div>
                     </div>
