--- a/src/main/resources/templates/assets/equipment_details_k.html
+++ b/src/main/resources/templates/assets/equipment_details_k.html
@@ -15,6 +15,30 @@
   <link rel="stylesheet" th:href="@{/dist/css/adminlte.min.css}">
   <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+  <!-- Viewer.js-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.3.7/viewer.css" integrity="sha256-HD7WuGVQWPCs3E5c5PdzAZEyVrbMtwEi5eRXNc+IlU8=" crossorigin="anonymous" />
+
+  <style>
+    #images{
+      display: flex;
+      justify-content: space-around;
+      flex-wrap: wrap;
+      /*width: 200px;*/
+      /*overflow-wrap: break-word;*/
+      list-style: none;
+      padding-left: 0;
+    }
+    #images  li{
+      width: 23%;
+      /*margin-right: 0.1px;*/
+    }
+
+    .videolist { position:relative; float:left; width:500px; height:300px; margin-right:50px; margin-top:15px; margin-bottom:30px; }
+    .videolist:hover{ cursor: pointer; }
+    .videoed { display:none; width:50px; height:50px; position: absolute; left:45%; top:45%; z-index:99; border-radius:100%; }
+    .videos{ display:none; border: 1px solid #080808; position:fixed; left:50%; top:50%; margin-left:-320px; margin-top:-210px; z-index:100; width:640px; height:360px; }
+    .vclose { position:absolute;right:1%; top:1%; border-radius:100%; cursor: pointer; }
+  </style>
 </head>
 <body class="hold-transition sidebar-mini">
 <!-- Site wrapper -->
@@ -137,6 +161,15 @@
 
                 <p class="text-muted">
                   在30000小时运行时间内减少低于20%</p>
+                <hr>
+
+                <strong><i class="fa fa-file-text-o mr-1"></i> Part Number</strong>
+
+                <p class="text-muted">
+                  163-001102-XX</p>
+
+
+
               </div>
               <!-- /.card-body -->
             </div>
@@ -165,40 +198,16 @@
                       <div class="row mb-3">
                         <h6 class="col-sm-12"> 设备图片信息</h6>
                         <div class="col-sm-12">
-                          <div class="row">
-                            <div class="col-sm-3">
-                              <img class="img-fluid mb-3" th:src="@{/images/CP4325_Artistic_1_jpg.jpg}" alt="Photo">
-                            </div>
-                            <!-- /.col -->
-                            <div class="col-sm-3">
-                              <img class="img-fluid mb-3" th:src="@{/images/CP4325_Artistic_2_jpg.jpg}" alt="Photo">
-                            </div>
-                            <div class="col-sm-3">
-                              <img class="img-fluid mb-3" th:src="@{/images/CP4325_Back_jpg.jpg}" alt="Photo">
-                            </div>
-                            <!-- /.col -->
-                            <div class="col-sm-3">
-                              <img class="img-fluid mb-3" th:src="@{/images/CP4325_High_Front_jpg.jpg}" alt="Photo">
-                            </div>
-                            <!-- /.col -->
-                          </div>
-                          <div class="row">
-                            <div class="col-sm-3">
-                              <img class="img-fluid mb-3" th:src="@{/images/CP4325_Side_jpg.jpg}" alt="Photo">
-                            </div>
-                            <!-- /.col -->
-                            <div class="col-sm-3">
-                              <img class="img-fluid mb-3" th:src="@{/images/CP4325_High_Left_jpg.jpg}" alt="Photo">
-                            </div>
-                            <div class="col-sm-3">
-                              <img class="img-fluid mb-3" th:src="@{/images/CP4325_High_Right_jpg.jpg}" alt="Photo">
-                            </div>
-                            <!-- /.col -->
-                            <div class="col-sm-3">
-                              <img class="img-fluid mb-3" th:src="@{/images/CP4325_Internal_jpg.jpg}" alt="Photo">
-                            </div>
-                            <!-- /.col -->
-                          </div>
+                          <ul id="images">
+                            <li><img class="img-fluid mb-3" th:src="@{/images/CP4325_Artistic_1_jpg.jpg}" alt="Photo"></li>
+                            <li><img class="img-fluid mb-3" th:src="@{/images/CP4325_Artistic_2_jpg.jpg}" alt="Photo"></li>
+                            <li><img class="img-fluid mb-3" th:src="@{/images/CP4325_Back_jpg.jpg}" alt="Photo"></li>
+                            <li><img class="img-fluid mb-3" th:src="@{/images/CP4325_High_Front_jpg.jpg}" alt="Photo"></li>
+                            <li><img class="img-fluid mb-3" th:src="@{/images/CP4325_Side_jpg.jpg}" alt="Photo"></li>
+                            <li><img class="img-fluid mb-3" th:src="@{/images/CP4325_High_Left_jpg.jpg}" alt="Photo"></li>
+                            <li><img class="img-fluid mb-3" th:src="@{/images/CP4325_High_Right_jpg.jpg}" alt="Photo"></li>
+                            <li><img class="img-fluid mb-3" th:src="@{/images/CP4325_Internal_jpg.jpg}" alt="Photo"></li>
+                          </ul>
                           <!-- /.row -->
                         </div>
                         <!-- /.col -->
@@ -430,7 +439,22 @@
 <script th:src="@{/dist/js/adminlte.min.js}"></script>
 <!-- AdminLTE for demo purposes -->
 <script th:src="@{/dist/js/demo.js}"></script>
+<!-- Viewer.js-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.3.7/viewer.js"></script>
+<script type="text/javascript">
 
+  // // View an image
+  // const viewer = new Viewer(document.getElementById('image'), {
+  //   inline: true,
+  //   viewed() {
+  //     viewer.zoomTo(1);
+  //   },
+  // });
+
+  // View a list of images
+  const gallery = new Viewer(document.getElementById('images'));
+
+</script>
 <script type="text/javascript">
   $('.videolist').each(function(){ //遍历视频列表
     $(this).hover(function(){ //鼠标移上来后显示播放按钮
