modified front page of equipment

--- a/src/main/resources/templates/base/equipment/search.html
+++ b/src/main/resources/templates/base/equipment/search.html
@@ -184,6 +184,7 @@
                 <th>系列</th>
                 <th>型号</th>
                 <th>详情</th>
+                <th>官网详情</th>
               </tr>
               </thead>
               <tbody>
@@ -195,6 +196,7 @@
                 <td th:text="${cinema.responsiblePhone}">140000</td>
                 <td th:text="${cinema.manager}">ac</td>
                 <th><a href="/base/equipment/details">详情</a></th>
+                <th><a href="/base/equipment/details">官网详情</a></th>
               </tr>
               <tr>
                 <td >1</td>
@@ -203,6 +205,7 @@
                 <td >科视 Christie</td>
                 <td >CP2215</td>
                 <td >DLP数字电影机</td>
+                <th><a href="/base/equipment/details">详情</a></th>
                 <th><a href="https://www.christiedigital.com/zh-cn/cinema/cinema-products/digital-cinema-projectors/Christie-CP2215-DLP-Digital-Cinema-Projector">官网详情</a></th>
               </tr>
               <tr>
@@ -212,6 +215,7 @@
                 <td >科视 Christie</td>
                 <td >CP2220</td>
                 <td >DLP数字电影机</td>
+                <th><a href="/base/equipment/details">详情</a></th>
                 <th><a href="https://www.christiedigital.com/zh-cn/cinema/cinema-products/digital-cinema-projectors/christie-CP2220-DLP-Digital-Cinema-Projector">官方详情</a></th>
               </tr>
               <tr>
@@ -221,6 +225,8 @@
                 <td >科视 Christie</td>
                 <td >CP2230</td>
                 <td >DLP数字电影机</td>
+                <th><a href="/base/equipment/details">详情</a></th>
+
                 <th><a href="https://www.christiedigital.com/zh-cn/cinema/cinema-products/digital-cinema-projectors/christie-CP2230-DLP-Digital-Cinema-Projector">官网详情</a></th>
               </tr>
               <tr>
@@ -230,6 +236,7 @@
                 <td >科视 Christie</td>
                 <td >CP4220</td>
                 <td >DLP数字电影机</td>
+                <th><a href="/base/equipment/details">详情</a></th>
                 <th><a href="https://www.christiedigital.com/zh-cn/cinema/cinema-products/digital-cinema-projectors/christie-CP4220-DLP-Digital-Cinema-Projector">官网详情</a></th>
               </tr>
               <tr>
@@ -239,6 +246,8 @@
                 <td >Barco Alchemy</td>
                 <td >DP2K-20C</td>
                 <td >小型DLP Cinema投影仪（18500）</td>
+                <th><a href="/base/equipment/details">详情</a></th>
+
                 <th><a href="https://www.barco.com.cn/zh-CN/product/dp2k-20c#specs">官网详情</a></th>
               </tr>
               <tr>
@@ -248,6 +257,7 @@
                 <td >Barco Alchemy</td>
                 <td >DP2K-23B</td>
                 <td >高亮度DLP Cinema投影仪（24500流明）</td>
+                <th><a href="/base/equipment/details">详情</a></th>
                 <th><a href="https://www.barco.com.cn/zh-CN/product/dp2k-23b">官网详情</a></th>
               </tr>
               <tr>
@@ -257,6 +267,7 @@
                 <td >Barco Alchemy</td>
                 <td >DP2K-23B</td>
                 <td >小型DLP Cinema投影仪（6000流明）</td>
+                <th><a href="/base/equipment/details">详情</a></th>
                 <th><a href="https://www.barco.com.cn/zh-CN/product/dp2k-8s">官网详情</a></th>
               </tr>
               <tr>
@@ -266,6 +277,7 @@
                 <td >Barco Alchemy</td>
                 <td >DP2K-10S</td>
                 <td >小型DLP Cinema投影仪（9000流明）</td>
+                <th><a href="/base/equipment/details">详情</a></th>
                 <th><a href="https://www.barco.com.cn/zh-CN/product/dp2k-10s">官网详情</a></th>
               </tr>
               </tbody>
