--- a/src/main/resources/templates/course/online_course.html
+++ b/src/main/resources/templates/course/online_course.html
@@ -113,11 +113,6 @@
                   <div class="form-group">
                     <button style="float: right" type="submit" class="btn btn-primary">筛选</button>
                   </div>
-
-                <!-- /.card-body -->
-<!--                  <div class="card-footer">-->
-<!--                    <button style="float: right" type="submit" class="btn btn-primary">查询</button>-->
-<!--                  </div>-->
                 </div>
               </form>
             </div>        
@@ -135,7 +130,7 @@
 
                       <img class="img-responsive attachment-block clearfix" th:src="@{/images/video_details.png}" style="height:200px;width:auto ;">
                     </div>
-                    <p style="padding-left: 10px; padding-right: 10px;">电影放映机安装及使用方法视频</p>
+                    <p style="padding-left: 10px; padding-right: 10px;">DP2K-20C投影灯盖板拆卸方法</p>
                     <div class="form-group row">
                       <div class="col-11">
                         <p style="padding-left: 10px; padding-bottom: 30px;">
@@ -152,7 +147,7 @@
                     <div style="padding-left:10px; padding-top:10px;">
                       <img class="img-responsive attachment-block clearfix" th:src="@{/images/video_details.png}" style="height:200px;width:auto ;">
                     </div>
-                    <p style="padding-left: 10px; padding-right: 10px;">测试方法视频</p>
+                    <p style="padding-left: 10px; padding-right: 10px;">DP2K-20C输入盖板拆卸方法</p>
                     <div class="form-group row">
                       <div class="col-11">
                         <p style="padding-left: 10px; padding-bottom: 30px;">
@@ -169,7 +164,7 @@
                     <div style="padding-left:10px; padding-top:10px;">
                       <img class="img-responsive attachment-block clearfix" th:src="@{/images/video_details.png}" style="height:200px;width:auto ;">
                     </div>
-                    <p style="padding-left: 10px; padding-right: 10px;">索尼电影放映机使用及注意事项视频</p>
+                    <p style="padding-left: 10px; padding-right: 10px;">DP2K-20C前盖板拆卸方法</p>
                     <div class="form-group row">
                       <div class="col-11">
                         <p style="padding-left: 10px; padding-bottom: 30px;">
@@ -186,7 +181,7 @@
                     <div style="padding-left:10px; padding-top:10px;">
                       <img class="img-responsive attachment-block clearfix" th:src="@{/images/video_details.png}" style="height:200px;width:auto ;">
                     </div>
-                    <p style="padding-left: 10px; padding-right: 10px;">配置方法视频</p>
+                    <p style="padding-left: 10px; padding-right: 10px;">DP2K-20C左盖板拆卸方法</p>
                     <div class="form-group row">
                       <div class="col-11">
                         <p style="padding-left: 10px; padding-bottom: 30px;">
