modified front page

--- a/src/main/resources/templates/documents/stand_details.html
+++ b/src/main/resources/templates/documents/stand_details.html
@@ -87,7 +87,7 @@
             <div class="col-md-12">
               <div class="card card-primary card-outline">
                 <div class="card-header">
-                  <h3 class="card-title">数字电影中档和流动放映系统用声频功率放大器技术要求和测量方法更新
+                  <h3 class="card-title">DP2K-20C投影灯盖板拆卸方法
                     <span class="mailbox-read-time float-right">2019年10月20日 1:45 下午</span>
                   </h3>
                 </div>
@@ -140,7 +140,7 @@
                       </div>
                       <div class="col-sm-6">
 <!--                        <video style="height: 400px; width: 600px;" autoplay="autoplay" controls="controls" th:src="@{/video/abc.mov}">-->
-                          <iframe src="http://218.241.227.185/mserver/player/?url=%2Fvod%2Fvod%2Fbmy2mkz9%2Findex.m3u8" height="400px" width="600px" frameborder="0" scrolling="no" allowfullscreen></iframe>
+                          <iframe src="http://218.241.227.185/mserver/player/?url=%2Fvod%2Fvod%2Fvx41gl30%2Findex.m3u8" height="400px" width="600px" frameborder="0" scrolling="no" allowfullscreen></iframe>
 <!--                        </video>-->
                       </div>
                     </div>
@@ -180,10 +180,11 @@
                   </div>
                   <!-- /.mailbox-read-message -->
                 </div>
-              </div>
+          </div>
+
               <!-- /. box -->
-            </div>
-           </div>
+        </div>
+
     </section>
             <!-- /.invoice -->
           </div><!-- /.col -->
