--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -599,6 +599,84 @@
                         <!--/.direct-chat -->
 
                         <!-- TO DO List -->
+                        <!-- /.card -->
+                    </section>
+                    <!-- /.Left col -->
+                    <!-- right col (We are only adding the ID to make the widgets sortable)-->
+                    <section class="col-lg-6 connectedSortable">
+                        <!-- Map card -->
+                        <!-- /.card -->
+                        <!-- solid sales graph -->
+                        <div class="card bg-info-gradient">
+                            <div class="card-header no-border">
+                                <div class="d-flex justify-content-between">
+                                    <div class="form-group">
+                                        <div class="row">
+                                            <select class="form-control col-sm-6">
+                                                <option>大地影院</option>
+                                                <option>保利影城</option>
+                                                <option>万达影城</option>
+                                                <option>劲松电影院</option>
+                                                <option>十里河影院</option>
+                                            </select>
+                                            <select class="form-control col-sm-6">
+                                                <option>放映厅 1</option>
+                                                <option>放映厅 2</option>
+                                                <option>放映厅 3</option>
+                                                <option>放映厅 4</option>
+                                                <option>放映厅 5</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <h3 class="card-title">
+                                        <!--                                        <i class="fa fa-th mr-1"></i>-->
+                                        声压级
+                                    </h3>
+                                    <a href="javascript:void(0);"></a>
+                                </div>
+
+                                <div class="card-tools">
+                                    <button type="button" class="btn bg-info btn-sm" data-widget="collapse">
+                                        <i class="fa fa-minus"></i>
+                                    </button>
+                                    <button type="button" class="btn bg-info btn-sm" data-widget="remove">
+                                        <i class="fa fa-times"></i>
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="card-body">
+                                <div class="chart" id="linechart" style="height: 370px;"></div>
+                            </div>
+                            <!-- /.card-body -->
+                            <!--                            <div class="card-footer bg-transparent">-->
+                            <!--                                <div class="row">-->
+                            <!--                                    <div class="col-4 text-center">-->
+                            <!--                                        <input type="text" class="knob" data-readonly="true" value="20" data-width="60" data-height="60"-->
+                            <!--                                               data-fgColor="#39CCCC">-->
+
+                            <!--                                        <div class="text-white">故障</div>-->
+                            <!--                                    </div>-->
+                            <!--                                    &lt;!&ndash; ./col &ndash;&gt;-->
+                            <!--                                    <div class="col-4 text-center">-->
+                            <!--                                        <input type="text" class="knob" data-readonly="true" value="50" data-width="60" data-height="60"-->
+                            <!--                                               data-fgColor="#39CCCC">-->
+
+                            <!--                                        <div class="text-white">正常</div>-->
+                            <!--                                    </div>-->
+                            <!--                                    &lt;!&ndash; ./col &ndash;&gt;-->
+                            <!--                                    <div class="col-4 text-center">-->
+                            <!--                                        <input type="text" class="knob" data-readonly="true" value="30" data-width="60" data-height="60"-->
+                            <!--                                               data-fgColor="#39CCCC">-->
+
+                            <!--                                        <div class="text-white">在修</div>-->
+                            <!--                                    </div>-->
+                            <!--                                    &lt;!&ndash; ./col &ndash;&gt;-->
+                            <!--                                </div>-->
+                            <!--                                &lt;!&ndash; /.row &ndash;&gt;-->
+                            <!--                            </div>-->
+                            <!-- /.card-footer -->
+                        </div>
+                        <!-- /.card -->
                         <div class="card">
                             <div class="card-header">
                                 <h3 class="card-title">
@@ -696,121 +774,43 @@
                                 <button type="button" class="btn btn-info float-right"><i class="fa fa-plus"></i>添加项目</button>
                             </div>
                         </div>
-                        <!-- /.card -->
-                    </section>
-                    <!-- /.Left col -->
-                    <!-- right col (We are only adding the ID to make the widgets sortable)-->
-                    <section class="col-lg-6 connectedSortable">
-                        <!-- Map card -->
-                        <!-- /.card -->
-                        <!-- solid sales graph -->
-                        <div class="card bg-info-gradient">
-                            <div class="card-header no-border">
-                                <div class="d-flex justify-content-between">
-                                    <div class="form-group">
-                                        <div class="row">
-                                            <select class="form-control col-sm-6">
-                                                <option>大地影院</option>
-                                                <option>保利影城</option>
-                                                <option>万达影城</option>
-                                                <option>劲松电影院</option>
-                                                <option>十里河影院</option>
-                                            </select>
-                                            <select class="form-control col-sm-6">
-                                                <option>放映厅 1</option>
-                                                <option>放映厅 2</option>
-                                                <option>放映厅 3</option>
-                                                <option>放映厅 4</option>
-                                                <option>放映厅 5</option>
-                                            </select>
-                                        </div>
-                                    </div>
-                                    <h3 class="card-title">
-                                        <!--                                        <i class="fa fa-th mr-1"></i>-->
-                                        声压级
-                                    </h3>
-                                    <a href="javascript:void(0);"></a>
-                                </div>
-
-                                <div class="card-tools">
-                                    <button type="button" class="btn bg-info btn-sm" data-widget="collapse">
-                                        <i class="fa fa-minus"></i>
-                                    </button>
-                                    <button type="button" class="btn bg-info btn-sm" data-widget="remove">
-                                        <i class="fa fa-times"></i>
-                                    </button>
-                                </div>
-                            </div>
-                            <div class="card-body">
-                                <div class="chart" id="linechart" style="height: 370px;"></div>
-                            </div>
-                            <!-- /.card-body -->
-                            <!--                            <div class="card-footer bg-transparent">-->
-                            <!--                                <div class="row">-->
-                            <!--                                    <div class="col-4 text-center">-->
-                            <!--                                        <input type="text" class="knob" data-readonly="true" value="20" data-width="60" data-height="60"-->
-                            <!--                                               data-fgColor="#39CCCC">-->
-
-                            <!--                                        <div class="text-white">故障</div>-->
-                            <!--                                    </div>-->
-                            <!--                                    &lt;!&ndash; ./col &ndash;&gt;-->
-                            <!--                                    <div class="col-4 text-center">-->
-                            <!--                                        <input type="text" class="knob" data-readonly="true" value="50" data-width="60" data-height="60"-->
-                            <!--                                               data-fgColor="#39CCCC">-->
-
-                            <!--                                        <div class="text-white">正常</div>-->
-                            <!--                                    </div>-->
-                            <!--                                    &lt;!&ndash; ./col &ndash;&gt;-->
-                            <!--                                    <div class="col-4 text-center">-->
-                            <!--                                        <input type="text" class="knob" data-readonly="true" value="30" data-width="60" data-height="60"-->
-                            <!--                                               data-fgColor="#39CCCC">-->
-
-                            <!--                                        <div class="text-white">在修</div>-->
-                            <!--                                    </div>-->
-                            <!--                                    &lt;!&ndash; ./col &ndash;&gt;-->
-                            <!--                                </div>-->
-                            <!--                                &lt;!&ndash; /.row &ndash;&gt;-->
-                            <!--                            </div>-->
-                            <!-- /.card-footer -->
-                        </div>
-                        <!-- /.card -->
 
                         <!-- Calendar -->
-                        <div class="card bg-success-gradient">
-                            <div class="card-header no-border">
-                                <h3 class="card-title">
-                                    <i class="fa fa-calendar"></i>
-                                    日常工作管理
-                                </h3>
-                                <!-- tools card -->
-                                <div class="card-tools">
-                                    <!-- button with a dropdown -->
-                                    <div class="btn-group">
-                                        <button type="button" class="btn btn-success btn-sm dropdown-toggle" data-toggle="dropdown">
-                                            <i class="fa fa-bars"></i></button>
-                                        <div class="dropdown-menu float-right" role="menu">
-                                            <a href="#" class="dropdown-item">添加事项</a>
-                                            <a href="#" class="dropdown-item">清除事项</a>
-                                            <div class="dropdown-divider"></div>
-                                            <a href="#" class="dropdown-item">查看事项</a>
-                                        </div>
-                                    </div>
-                                    <button type="button" class="btn btn-success btn-sm" data-widget="collapse">
-                                        <i class="fa fa-minus"></i>
-                                    </button>
-                                    <button type="button" class="btn btn-success btn-sm" data-widget="remove">
-                                        <i class="fa fa-times"></i>
-                                    </button>
-                                </div>
-                                <!-- /. tools -->
-                            </div>
-                            <!-- /.card-header -->
-                            <div class="card-body p-0">
-                                <!--The calendar -->
-                                <div id="calendar" style="width: 100%"></div>
-                            </div>
-                            <!-- /.card-body -->
-                        </div>
+<!--                        <div class="card bg-success-gradient">-->
+<!--                            <div class="card-header no-border">-->
+<!--                                <h3 class="card-title">-->
+<!--                                    <i class="fa fa-calendar"></i>-->
+<!--                                    日常工作管理-->
+<!--                                </h3>-->
+<!--                                &lt;!&ndash; tools card &ndash;&gt;-->
+<!--                                <div class="card-tools">-->
+<!--                                    &lt;!&ndash; button with a dropdown &ndash;&gt;-->
+<!--                                    <div class="btn-group">-->
+<!--                                        <button type="button" class="btn btn-success btn-sm dropdown-toggle" data-toggle="dropdown">-->
+<!--                                            <i class="fa fa-bars"></i></button>-->
+<!--                                        <div class="dropdown-menu float-right" role="menu">-->
+<!--                                            <a href="#" class="dropdown-item">添加事项</a>-->
+<!--                                            <a href="#" class="dropdown-item">清除事项</a>-->
+<!--                                            <div class="dropdown-divider"></div>-->
+<!--                                            <a href="#" class="dropdown-item">查看事项</a>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+<!--                                    <button type="button" class="btn btn-success btn-sm" data-widget="collapse">-->
+<!--                                        <i class="fa fa-minus"></i>-->
+<!--                                    </button>-->
+<!--                                    <button type="button" class="btn btn-success btn-sm" data-widget="remove">-->
+<!--                                        <i class="fa fa-times"></i>-->
+<!--                                    </button>-->
+<!--                                </div>-->
+<!--                                &lt;!&ndash; /. tools &ndash;&gt;-->
+<!--                            </div>-->
+<!--                            &lt;!&ndash; /.card-header &ndash;&gt;-->
+<!--                            <div class="card-body p-0">-->
+<!--                                &lt;!&ndash;The calendar &ndash;&gt;-->
+<!--                                <div id="calendar" style="width: 100%"></div>-->
+<!--                            </div>-->
+<!--                            &lt;!&ndash; /.card-body &ndash;&gt;-->
+<!--                        </div>-->
                         <!-- /.card -->
                     </section>
                     <!-- right col -->
@@ -1523,7 +1523,7 @@
             type: 'value'
         },
         series: [{
-            data: [60,59,43,76,46,55,70],
+            data: [10,11,10,9,11,10,9],
             type: 'line',
             smooth: true,
             hover: true,
